# timpdftk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pdf_samples/: ab_UCS-2_BE.txt
pdftk/: CMakeLists.txt  embedded_icc.cpp  embedded_icc.h  pdftk.cpp  pdfwriter.cpp  pdfwriter.h  po_stream.cpp  po_stream.h
